I don't know how committing works. Isn't that a funny irony

--- a/assignment/problem_2/controllers.ipynb
+++ b/assignment/problem_2/controllers.ipynb
@@ -36,10 +36,10 @@
    "outputs": [],
    "source": [
     "# Please fill in your names, student numbers, netID, and emails below.\n",
-    "STUDENT_1_NAME = \"\"\n",
-    "STUDENT_1_STUDENT_NUMBER = \"\"\n",
-    "STUDENT_1_NETID = \"\"\n",
-    "STUDENT_1_EMAIL = \"\""
+    "STUDENT_1_NAME = \"a\"\n",
+    "STUDENT_1_STUDENT_NUMBER = \"a\"\n",
+    "STUDENT_1_NETID = \"a\"\n",
+    "STUDENT_1_EMAIL = \"a\""
    ]
   },
   {
@@ -207,7 +207,7 @@
     "         tau_fb: Link torques computed by the PD controller [Nm] of shape (2, )\n",
     "    \"\"\"\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    tau_fb = kp@(th_des - th) + kd@(th_d_des - th_d)\n",
     "\n",
     "    return tau_fb"
    ]
@@ -253,17 +253,14 @@
     "         tau_fb_rel: Link torques computed by the PD controller [Nm] of shape (2, )\n",
     "    \"\"\"\n",
     "    # compute the relative angles and velocities\n",
-    "    # th_rel =\n",
-    "    # th_d_rel =\n",
-    "    # th_des_rel =\n",
-    "    # th_d_des_rel =\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    th_rel = jnp.array([th[0], th[1]-th[0]])\n",
+    "    th_d_rel = jnp.array([th_d[0], th_d[1]-th_d[0]])\n",
+    "    th_des_rel = jnp.array([th_des[0], th_des[1]-th_des[0]])\n",
+    "    th_d_des_rel = jnp.array([th_d_des[0], th_d_des[1]-th_d_des[0]])\n",
+    "    \n",
     "\n",
     "    # compute the PD torque based on the error of the joint angles and velocities\n",
-    "    # tau_fb_rel =\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    tau_fb_rel = kp@(th_des_rel - th_rel) + kd@(th_d_des_rel - th_d_rel)\n",
     "\n",
     "    return tau_fb_rel"
    ]
@@ -457,7 +454,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
