--- a/Kian_code/find_eoms.ipynb
+++ b/Kian_code/find_eoms.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "24fd786e",
+   "execution_count": 1,
+   "id": "94c0c130",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,65 +12,112 @@
     "t = sp.Symbol('t')\n",
     "q1= sp.Function(\"q1\")(t)\n",
     "q2= sp.Function(\"q2\")(t)\n",
-    "# q1_dot, q2_dot, q3_dot = sp.symbols('q1_dot q2_dot q3_dot')\n",
-    "# q1_ddot, q2_ddot, q3_ddot = sp.symbols('q1_ddot q2_ddot q3_ddot')\n",
-    "\n",
+    "q1_dot = sp.diff(q1, t)\n",
+    "q2_dot = sp.diff(q2, t)\n",
+    "q1_ddot = sp.diff(q1_dot, t)\n",
+    "q2_ddot = sp.diff(q2_dot, t)\n",
     "\n",
     "# Define the link lengths and masses\n",
     "m1, m2, g = sp.symbols('m1 m2 g')\n",
-    "\n",
+    "l1, l2, lc1, lc2 = sp.symbols('l1 l2 lc1 lc2')\n",
+    "J1, J2 = sp.symbols('J1 J2')\n",
     "\n",
     "# Positions of the center of mass for each link\n",
-    "x1 = q1\n",
-    "y1 = 0\n",
-    "x2 = x1\n",
-    "y2 = q2\n",
-    "x3 = x1 + q3\n",
-    "y3 = y2\n",
+    "x1 = lc1 * sp.cos(q1)\n",
+    "y1 = lc1 * sp.sin(q1)\n",
+    "x2 = l1 * sp.cos(q1) + lc2 * sp.cos(q2)\n",
+    "y2 = l1 * sp.sin(q1) + lc2 * sp.sin(q2)\n",
     "\n",
     "# Velocities of the center of mass for each link\n",
     "vx1 = sp.diff(x1, t)\n",
     "vy1 = sp.diff(y1, t)\n",
     "vx2 = sp.diff(x2, t)\n",
-    "vy2 = sp.diff(y2, t)\n",
-    "vx3 = sp.diff(x3, t)\n",
-    "vy3 = sp.diff(y3, t)\n",
-    "\n",
-    "\n",
-    "# Translational kinetic energy of each link\n",
-    "T1_trans = 0.5 * m1 * (vx1**2 + vy1**2)\n",
-    "T2_trans = 0.5 * m2 * (vx2**2 + vy2**2)\n",
-    "T3_trans = 0.5 * m3 * (vx3**2 + vy3**2)\n",
-    "\n",
+    "vy2 = sp.diff(y2, t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "df4bda64",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Kinetic energy of each link\n",
+    "T1 = 0.5 * m1 * (vx1**2 + vy1**2) + 0.5 * J1 * q1_dot**2\n",
+    "T2 = 0.5 * m2 * (vx2**2 + vy2**2) + 0.5 * J2 * q2_dot**2\n",
     "\n",
     "# Total kinetic energy\n",
-    "T = T1_trans + T2_trans + T3_trans\n",
-    "\n",
+    "T = T1 + T2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f71af6e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "((Derivative(q1(t), (t, 2)), ddq1), (Derivative(q1(t), t), dq1), (q1(t), q1), (Derivative(q2(t), (t, 2)), ddq2), (Derivative(q2(t), t), dq2), (q2(t), q2))\n"
+     ]
+    }
+   ],
+   "source": [
     "# Potential energy of each link\n",
-    "V1 = 0\n",
-    "V2 = m2 * g * q2\n",
-    "V3 = m3 * g * q2\n",
+    "V1 = m1 * g * y1\n",
+    "V2 = m2 * g * y2\n",
     "\n",
     "# Total potential energy\n",
-    "V = V1 + V2 + V3\n",
+    "V = V1 + V2\n",
     "\n",
     "# Lagrangian\n",
     "L = T - V\n",
     "\n",
     "# Generalized coordinates and velocities\n",
-    "q = [q1, q2, q3]\n",
-    "# q_dot = sp.Matrix([q1_dot, q2_dot, q3_dot])\n",
-    "# q_ddot = sp.Matrix([q1_ddot, q2_ddot, q3_ddot])\n",
+    "q = [q1, q2]\n",
+    "q_dot = sp.Matrix([q1_dot, q2_dot])\n",
+    "q_ddot = sp.Matrix([q1_ddot, q2_ddot])\n",
     "replacements = ()\n",
-    "for i in range(3):\n",
+    "for i in range(2):\n",
     "    replacements += ((q[i].diff(t).diff(t), sp.Symbol(f'ddq{i + 1}')),\n",
     "                    (q[i].diff(t), sp.Symbol(f'dq{i + 1}')),\n",
     "                    (q[i], sp.Symbol(f'q{i + 1}')))\n",
     "\n",
-    "# print(replacements)\n",
+    "print(replacements)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "24fd786e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "L_q1 = J1*ddq1\n",
+      "       + ddq1*l1**2*m2\n",
+      "       + ddq1*lc1**2*m1\n",
+      "       + ddq2*l1*lc2*m2*cos(q1 - q2)\n",
+      "       + dq2**2*l1*lc2*m2*sin(q1 - q2)\n",
+      "       + g*l1*m2*cos(q1)\n",
+      "       + g*lc1*m1*cos(q1)\n",
+      "\n",
+      "L_q2 = J2*ddq2\n",
+      "       + ddq1*l1*lc2*m2*cos(q1 - q2)\n",
+      "       + ddq2*lc2**2*m2 - dq1**2*l1*lc2*m2*sin(q1 - q2)\n",
+      "       + g*lc2*m2*cos(q2)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
     "# Lagrangian equations\n",
     "eoms = []\n",
-    "for i in range(3):\n",
+    "for i in range(2):\n",
     "    L_qi = L.diff(q[i].diff(t)).diff(t) - L.diff(q[i])\n",
     "    L_qi = L_qi.simplify().subs(replacements)\n",
     "    eoms.append(L_qi)\n",
@@ -81,50 +128,120 @@
     "# L_q3 = sp.diff(sp.diff(L, q3_dot), t) - sp.diff(L, q3)\n",
     "# L_q3 = L_q3.simplify().subs({sp.diff(q3_dot, t): q3_ddot})\n",
     "# Pretty print the mass matrix, Coriolis matrix, and equations of motion\n",
-    "print(\"L_q1:\")\n",
-    "sp.pretty_print(eoms[0])\n",
-    "\n",
-    "print(\"\\n L_q2\")\n",
-    "sp.pretty_print(eoms[1])\n",
-    "\n",
-    "print(\"\\n L_q3\")\n",
-    "sp.pretty_print(eoms[2])\n",
     "\n",
     "\n",
-    "q_dot = [q[0].diff(t), q[1].diff(t), q[2].diff(t)]\n",
-    "q_ddot = [q_dot[0].diff(t), q_dot[1].diff(t), q_dot[2].diff(t)]\n",
+    "def format_lagrange(eom, name):\n",
+    "    eom = str(eom).replace('1.0*','')\n",
+    "    terms = str(eom).split('+')\n",
+    "    formatted = f\"{name} = \" \n",
+    "    for i, term in enumerate(terms):\n",
+    "        if i == 0:\n",
+    "            formatted += f\"{term.strip()}\\n\"\n",
+    "        else:\n",
+    "            formatted += f\"       + {term.strip()}\\n\"\n",
+    "    return formatted\n",
+    "\n",
+    "L_q1_formatted = format_lagrange(eoms[0], \"L_q1\")\n",
+    "L_q2_formatted = format_lagrange(eoms[1], \"L_q2\")\n",
+    "\n",
+    "# Print the formatted equations\n",
+    "print(L_q1_formatted)\n",
+    "print(L_q2_formatted)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "8bf4dba7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Mass Matrix (M):\n",
+      "Matrix([\n",
+      "[J1 + l1^2*m2 + lc1^2*m1, l1*lc2*m2*cos(q1 - q2)],\n",
+      "[ l1*lc2*m2*cos(q1 - q2),          J2 + lc2^2*m2]])\n",
+      "\n",
+      "Coriolis Matrix (C):\n",
+      "Matrix([\n",
+      "[                          0, dq2*l1*lc2*m2*sin(q1 - q2)],\n",
+      "[-dq1*l1*lc2*m2*sin(q1 - q2),                          0]])\n",
+      "\n",
+      "Gravitational Vector (G):\n",
+      "Matrix([\n",
+      "[g*(l1*m2 + lc1*m1)*cos(q1)],\n",
+      "[          g*lc2*m2*cos(q2)]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Custom printer to replace ** with ^ and remove superscript formatting\n",
+    "\n",
+    "from sympy.printing.str import StrPrinter\n",
+    "\n",
+    "class CustomStrPrinter(StrPrinter):\n",
+    "    def _print_Pow(self, expr):\n",
+    "        base, exp = expr.as_base_exp()\n",
+    "        if exp == 1:\n",
+    "            return self._print(base)\n",
+    "        elif exp == -1:\n",
+    "            return f\"1/({self._print(base)})\"\n",
+    "        else:\n",
+    "            return f\"{self._print(base)}^{self._print(exp)}\"\n",
+    "\n",
+    "# Use the custom printer\n",
+    "def custom_pretty(expr):\n",
+    "    return CustomStrPrinter().doprint(expr)\n",
+    "\n",
+    "# Generalized velocity and acceleration\n",
+    "q_dot = [q[0].diff(t), q[1].diff(t)]\n",
+    "q_ddot = [q_dot[0].diff(t), q_dot[1].diff(t)]\n",
     "# Mass matrix (inertia matrix)\n",
-    "M = sp.zeros(3)\n",
-    "M4C = sp.zeros(3)\n",
-    "for i in range(3):\n",
-    "    for j in range(3):\n",
+    "M = sp.zeros(2)\n",
+    "M4C = sp.zeros(2)\n",
+    "for i in range(2):\n",
+    "    for j in range(2):\n",
     "        M4C[i, j] = (T.diff(q_dot[i]).diff(q_dot[j])).simplify()\n",
     "        M[i, j] = M4C[i, j].subs(replacements)\n",
     "        # M[i, j] = sp.diff(T, q_dot[i], q_dot[j])\n",
-    "\n",
-    "print(\"Mass Matrix (M):\")\n",
-    "print(M)\n",
+    "M = sp.nsimplify(M)\n",
     "\n",
     "# Coriolis matrix\n",
-    "C = sp.zeros(3, 3)\n",
-    "for i in range(3):\n",
-    "    for j in range(3):\n",
-    "        for k in range(3):\n",
+    "C = sp.zeros(2, 2)\n",
+    "for i in range(2):\n",
+    "    for j in range(2):\n",
+    "        for k in range(2):\n",
     "            C[i, j] += 0.5 * (M4C[i, j].diff(q[k]) + M4C[i, k].diff(q[j]) - M4C[j, k].diff(q[i])) * q_dot[k]\n",
     "        C[i, j] = C[i, j].simplify().subs(replacements)\n",
-    "\n",
-    "\n",
-    "print(\"Coriolis Matrix (C)::\")\n",
-    "print(C)\n",
+    "C = sp.nsimplify(C)\n",
     "\n",
     "# Gravitational force vector\n",
-    "G = sp.zeros(3, 1)\n",
-    "for i in range(3):\n",
+    "G = sp.zeros(2, 1)\n",
+    "for i in range(2):\n",
     "    G[i] = V.diff(q[i]).simplify().subs(replacements)\n",
+    "G = sp.nsimplify(G)\n",
     "\n",
-    "print(\" Gravitational Vector (G):\")\n",
-    "print(G)\n"
+    "# Print the matrices using the custom printer\n",
+    "print(\"\\nMass Matrix (M):\")\n",
+    "print(custom_pretty(M))\n",
+    "\n",
+    "print(\"\\nCoriolis Matrix (C):\")\n",
+    "print(custom_pretty(C))\n",
+    "\n",
+    "print(\"\\nGravitational Vector (G):\")\n",
+    "print(custom_pretty(G))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e547f4c7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
