First attempt at including actuator, mostly wrong information

--- a/Kian_code/find_eoms.ipynb
+++ b/Kian_code/find_eoms.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "94c0c130",
+   "id": "b43582c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "df4bda64",
+   "id": "22d6051c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f71af6e6",
+   "id": "1acbaf45",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8bf4dba7",
+   "id": "9d0ede96",
    "metadata": {},
    "outputs": [
     {
@@ -237,8 +237,70 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 55,
+   "id": "99f80ea1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrix([[l1*sin(q1(t)) + lr2*sin(q2(t)) - yp], [-l1*cos(q1(t)) - lr2*cos(q2(t)) + xp]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Actuator parameters (pulley)\n",
+    "xp, yp = sp.symbols('xp yp') #x, y coordinate of pulley center\n",
+    "rp = sp.symbols('rp') #Radius of the pulley\n",
+    "#theta = sp.symbols('theta')\n",
+    "\n",
+    "# Rope connection length along joint 2\n",
+    "lr2 = sp.symbols('lr2')\n",
+    "xr2 = l1 * sp.cos(q1) + lr2 * sp.cos(q2)\n",
+    "yr2 = l1 * sp.sin(q1) + lr2 * sp.sin(q2)\n",
+    "\n",
+    "ld = sp.Matrix([[xp - xr2],\n",
+    "               [yp - yr2]])\n",
+    "\n",
+    "ld_unit = ld#/ld.norm()\n",
+    "\n",
+    "ccw_rot = sp.Matrix([[0, -1], \n",
+    "                     [1, 0]])\n",
+    "\n",
+    "ldr = ccw_rot * ld_unit #* rp\n",
+    "print(ldr)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "12ebe607",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "theta:\n",
+      " atan2(-l1*cos(q1(t)) - lr2*cos(q2(t)) + xp, l1*sin(q1(t)) + lr2*sin(q2(t)) - yp)\n",
+      "\n",
+      "theta_d: \n",
+      " 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "theta = sp.atan2(ldr[1], ldr[0])\n",
+    "print(\"theta:\\n\", theta)\n",
+    "theta_d = sp.diff(theta, t) + sp.diff(theta, t)\n",
+    "print(\"\\ntheta_d: \\n\", theta_d)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "e547f4c7",
+   "id": "7e9dda5d",
    "metadata": {},
    "outputs": [],
    "source": []
