--- a/Kian_code/find_eoms.ipynb
+++ b/Kian_code/find_eoms.ipynb
@@ -237,70 +237,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 48,
    "id": "99f80ea1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Matrix([[l1*sin(q1(t)) + lr2*sin(q2(t)) - yp], [-l1*cos(q1(t)) - lr2*cos(q2(t)) + xp]])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Actuator parameters (pulley)\n",
-    "xp, yp = sp.symbols('xp yp') #x, y coordinate of pulley center\n",
-    "rp = sp.symbols('rp') #Radius of the pulley\n",
-    "#theta = sp.symbols('theta')\n",
+    "xa, ya = sp.symbols('xa ya') #x, y coordinate of pulley center\n",
     "\n",
     "# Rope connection length along joint 2\n",
     "lr2 = sp.symbols('lr2')\n",
-    "xr2 = l1 * sp.cos(q1) + lr2 * sp.cos(q2)\n",
-    "yr2 = l1 * sp.sin(q1) + lr2 * sp.sin(q2)\n",
+    "kx = l1 * sp.cos(q1) + lr2 * sp.cos(q2)\n",
+    "ky = l1 * sp.sin(q1) + lr2 * sp.sin(q2)\n",
     "\n",
-    "ld = sp.Matrix([[xp - xr2],\n",
-    "               [yp - yr2]])\n",
+    "k = sp.Matrix([[kx],\n",
+    "               [ky]])\n",
     "\n",
-    "ld_unit = ld#/ld.norm()\n",
+    "dkdq1 = sp.diff(k, q1)\n",
+    "dkdq2 = sp.diff(k, q2)\n",
     "\n",
-    "ccw_rot = sp.Matrix([[0, -1], \n",
-    "                     [1, 0]])\n",
+    "R = sp.Matrix([[xa - kx],\n",
+    "               [ya - ky]])\n",
+    "Rx = R[0]\n",
+    "Ry = R[1]\n",
+    "r = R/R.norm()\n",
     "\n",
-    "ldr = ccw_rot * ld_unit #* rp\n",
-    "print(ldr)\n"
+    "A1 = r.dot(dkdq1)\n",
+    "A2 = r.dot(dkdq2)\n",
+    "A = sp.Matrix([[A1],\n",
+    "               [A2]])\n",
+    "A = sp.simplify(A)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 49,
    "id": "12ebe607",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "h = sp.atan2(Rx, Ry)\n",
+    "theta = sp.Matrix([[h],\n",
+    "                   [q2]])\n",
+    "\n",
+    "Jh = theta.jacobian(q)\n",
+    "Jh = sp.simplify(Jh)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "4d214328",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Jh_inv = Jh.inv()\n",
+    "Jh_invtrans = Jh_inv.transpose()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "7e9dda5d",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "theta:\n",
-      " atan2(-l1*cos(q1(t)) - lr2*cos(q2(t)) + xp, l1*sin(q1(t)) + lr2*sin(q2(t)) - yp)\n",
+      "⎡                                                                              ↪\n",
+      "⎢                       -(lr₂⋅sin(q₁(t) - q₂(t)) - xa⋅sin(q₁(t)) + ya⋅cos(q₁(t ↪\n",
+      "⎢                       ────────────────────────────────────────────────────── ↪\n",
+      "⎢                                                    _________________________ ↪\n",
+      "⎢                                                   ╱                          ↪\n",
+      "⎢                                                 ╲╱  │l₁⋅sin(q₁(t)) + lr₂⋅sin ↪\n",
+      "⎢                                                                              ↪\n",
+      "⎢lr₂⋅(-(l₁⋅sin(q₁(t) - q₂(t)) + xa⋅sin(q₂(t)) - ya⋅cos(q₂(t)))⋅(l₁ + lr₂⋅cos(q ↪\n",
+      "⎢───────────────────────────────────────────────────────────────────────────── ↪\n",
+      "⎢                                                    _________________________ ↪\n",
+      "⎢                                                   ╱                          ↪\n",
+      "⎣                                                 ╲╱  │l₁⋅sin(q₁(t)) + lr₂⋅sin ↪\n",
       "\n",
-      "theta_d: \n",
-      " 0\n"
+      "↪     ⎛  2                                                                     ↪\n",
+      "↪ )))⋅⎝l₁  + 2⋅l₁⋅lr₂⋅cos(q₁(t) - q₂(t)) - 2⋅l₁⋅xa⋅cos(q₁(t)) - 2⋅l₁⋅ya⋅sin(q₁ ↪\n",
+      "↪ ──────────────────────────────────────────────────────────────────────────── ↪\n",
+      "↪ ________________________________________________________                     ↪\n",
+      "↪              2                                        2                      ↪\n",
+      "↪ (q₂(t)) - ya│  + │l₁⋅cos(q₁(t)) + lr₂⋅cos(q₂(t)) - xa│  ⋅(l₁ + lr₂⋅cos(q₁(t) ↪\n",
+      "↪                                                                              ↪\n",
+      "↪ ₁(t) - q₂(t)) - xa⋅cos(q₁(t)) - ya⋅sin(q₁(t))) - (lr₂⋅sin(q₁(t) - q₂(t)) - x ↪\n",
+      "↪ ──────────────────────────────────────────────────────────────────────────── ↪\n",
+      "↪ ________________________________________________________                     ↪\n",
+      "↪              2                                        2                      ↪\n",
+      "↪ (q₂(t)) - ya│  + │l₁⋅cos(q₁(t)) + lr₂⋅cos(q₂(t)) - xa│  ⋅(l₁ + lr₂⋅cos(q₁(t) ↪\n",
+      "\n",
+      "↪           2                                                 2     2⎞         ↪\n",
+      "↪ (t)) + lr₂  - 2⋅lr₂⋅xa⋅cos(q₂(t)) - 2⋅lr₂⋅ya⋅sin(q₂(t)) + xa  + ya ⎠         ↪\n",
+      "↪ ─────────────────────────────────────────────────────────────────────        ↪\n",
+      "↪                                                                              ↪\n",
+      "↪                                                                              ↪\n",
+      "↪  - q₂(t)) - xa⋅cos(q₁(t)) - ya⋅sin(q₁(t)))                                   ↪\n",
+      "↪                                                                              ↪\n",
+      "↪ a⋅sin(q₁(t)) + ya⋅cos(q₁(t)))⋅(l₁⋅cos(q₁(t) - q₂(t)) + lr₂ - xa⋅cos(q₂(t)) - ↪\n",
+      "↪ ──────────────────────────────────────────────────────────────────────────── ↪\n",
+      "↪                                                                              ↪\n",
+      "↪                                                                              ↪\n",
+      "↪  - q₂(t)) - xa⋅cos(q₁(t)) - ya⋅sin(q₁(t)))                                   ↪\n",
+      "\n",
+      "↪                 ⎤\n",
+      "↪                 ⎥\n",
+      "↪                 ⎥\n",
+      "↪                 ⎥\n",
+      "↪                 ⎥\n",
+      "↪                 ⎥\n",
+      "↪                 ⎥\n",
+      "↪  ya⋅sin(q₂(t))))⎥\n",
+      "↪ ────────────────⎥\n",
+      "↪                 ⎥\n",
+      "↪                 ⎥\n",
+      "↪                 ⎦\n"
      ]
     }
    ],
    "source": [
-    "theta = sp.atan2(ldr[1], ldr[0])\n",
-    "print(\"theta:\\n\", theta)\n",
-    "theta_d = sp.diff(theta, t) + sp.diff(theta, t)\n",
-    "print(\"\\ntheta_d: \\n\", theta_d)\n"
+    "A_theta = Jh_invtrans * A\n",
+    "A_theta = sp.simplify(A_theta)\n",
+    "sp.pprint(A_theta)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e9dda5d",
+   "id": "369aa4ff",
    "metadata": {},
    "outputs": [],
    "source": []
