Write files to find A-matrix, also with Cosimo suggestion

--- a/Kian_code/find_eoms.ipynb
+++ b/Kian_code/find_eoms.ipynb
@@ -237,10 +237,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 15,
    "id": "99f80ea1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrix([\n",
+      "[ l1*(lr2*sin(q1(t) - q2(t)) - xa*sin(q1(t)) + ya*cos(q1(t)))/Abs(l1*sin(q1(t)) + lr2*sin(q2(t)) - ya)^2 + Abs(l1*cos(q1(t)) + lr2*cos(q2(t)) - xa)^2^1/2],\n",
+      "[lr2*(-l1*sin(q1(t) - q2(t)) - xa*sin(q2(t)) + ya*cos(q2(t)))/Abs(l1*sin(q1(t)) + lr2*sin(q2(t)) - ya)^2 + Abs(l1*cos(q1(t)) + lr2*cos(q2(t)) - xa)^2^1/2]])\n"
+     ]
+    }
+   ],
    "source": [
     "# Actuator parameters (pulley)\n",
     "xa, ya = sp.symbols('xa ya') #x, y coordinate of pulley center\n",
@@ -266,12 +276,13 @@
     "A2 = r.dot(dkdq2)\n",
     "A = sp.Matrix([[A1],\n",
     "               [A2]])\n",
-    "A = sp.simplify(A)"
+    "A = sp.simplify(A)\n",
+    "print(custom_pretty(A))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 11,
    "id": "12ebe607",
    "metadata": {},
    "outputs": [],
@@ -279,14 +290,15 @@
     "h = sp.atan2(Rx, Ry)\n",
     "theta = sp.Matrix([[h],\n",
     "                   [q2]])\n",
-    "\n",
+    "theta = sp.Matrix([[q2],\n",
+    "                   [h]])\n",
     "Jh = theta.jacobian(q)\n",
     "Jh = sp.simplify(Jh)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 12,
    "id": "4d214328",
    "metadata": {},
    "outputs": [],
@@ -297,80 +309,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 17,
    "id": "7e9dda5d",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
+     "data": {
+      "text/html": [
+       "<style>.container { width:200% !important; }</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "⎡                                                                              ↪\n",
-      "⎢                       -(lr₂⋅sin(q₁(t) - q₂(t)) - xa⋅sin(q₁(t)) + ya⋅cos(q₁(t ↪\n",
-      "⎢                       ────────────────────────────────────────────────────── ↪\n",
-      "⎢                                                    _________________________ ↪\n",
-      "⎢                                                   ╱                          ↪\n",
-      "⎢                                                 ╲╱  │l₁⋅sin(q₁(t)) + lr₂⋅sin ↪\n",
-      "⎢                                                                              ↪\n",
-      "⎢lr₂⋅(-(l₁⋅sin(q₁(t) - q₂(t)) + xa⋅sin(q₂(t)) - ya⋅cos(q₂(t)))⋅(l₁ + lr₂⋅cos(q ↪\n",
-      "⎢───────────────────────────────────────────────────────────────────────────── ↪\n",
-      "⎢                                                    _________________________ ↪\n",
-      "⎢                                                   ╱                          ↪\n",
-      "⎣                                                 ╲╱  │l₁⋅sin(q₁(t)) + lr₂⋅sin ↪\n",
-      "\n",
-      "↪     ⎛  2                                                                     ↪\n",
-      "↪ )))⋅⎝l₁  + 2⋅l₁⋅lr₂⋅cos(q₁(t) - q₂(t)) - 2⋅l₁⋅xa⋅cos(q₁(t)) - 2⋅l₁⋅ya⋅sin(q₁ ↪\n",
-      "↪ ──────────────────────────────────────────────────────────────────────────── ↪\n",
-      "↪ ________________________________________________________                     ↪\n",
-      "↪              2                                        2                      ↪\n",
-      "↪ (q₂(t)) - ya│  + │l₁⋅cos(q₁(t)) + lr₂⋅cos(q₂(t)) - xa│  ⋅(l₁ + lr₂⋅cos(q₁(t) ↪\n",
-      "↪                                                                              ↪\n",
-      "↪ ₁(t) - q₂(t)) - xa⋅cos(q₁(t)) - ya⋅sin(q₁(t))) - (lr₂⋅sin(q₁(t) - q₂(t)) - x ↪\n",
-      "↪ ──────────────────────────────────────────────────────────────────────────── ↪\n",
-      "↪ ________________________________________________________                     ↪\n",
-      "↪              2                                        2                      ↪\n",
-      "↪ (q₂(t)) - ya│  + │l₁⋅cos(q₁(t)) + lr₂⋅cos(q₂(t)) - xa│  ⋅(l₁ + lr₂⋅cos(q₁(t) ↪\n",
-      "\n",
-      "↪           2                                                 2     2⎞         ↪\n",
-      "↪ (t)) + lr₂  - 2⋅lr₂⋅xa⋅cos(q₂(t)) - 2⋅lr₂⋅ya⋅sin(q₂(t)) + xa  + ya ⎠         ↪\n",
-      "↪ ─────────────────────────────────────────────────────────────────────        ↪\n",
-      "↪                                                                              ↪\n",
-      "↪                                                                              ↪\n",
-      "↪  - q₂(t)) - xa⋅cos(q₁(t)) - ya⋅sin(q₁(t)))                                   ↪\n",
-      "↪                                                                              ↪\n",
-      "↪ a⋅sin(q₁(t)) + ya⋅cos(q₁(t)))⋅(l₁⋅cos(q₁(t) - q₂(t)) + lr₂ - xa⋅cos(q₂(t)) - ↪\n",
-      "↪ ──────────────────────────────────────────────────────────────────────────── ↪\n",
-      "↪                                                                              ↪\n",
-      "↪                                                                              ↪\n",
-      "↪  - q₂(t)) - xa⋅cos(q₁(t)) - ya⋅sin(q₁(t)))                                   ↪\n",
-      "\n",
-      "↪                 ⎤\n",
-      "↪                 ⎥\n",
-      "↪                 ⎥\n",
-      "↪                 ⎥\n",
-      "↪                 ⎥\n",
-      "↪                 ⎥\n",
-      "↪                 ⎥\n",
-      "↪  ya⋅sin(q₂(t))))⎥\n",
-      "↪ ────────────────⎥\n",
-      "↪                 ⎥\n",
-      "↪                 ⎥\n",
-      "↪                 ⎦\n"
+      "⎡lr₂⋅(-(l₁⋅sin(q₁(t) - q₂(t)) + xa⋅sin(q₂(t)) - ya⋅cos(q₂(t)))⋅(l₁ + lr₂⋅cos(q₁(t) - q₂(t)) - xa⋅cos(q₁(t)) - ya⋅sin(q₁(t))) - (lr₂⋅sin(q₁(t) - q₂(t)) - xa⋅sin(q₁(t)) + ya⋅cos(q₁(t)))⋅(l₁⋅cos(q₁(t) - q₂(t)) + lr₂ - xa⋅cos(q₂(t)) - ya⋅sin(q₂(t))))⎤\n",
+      "⎢─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────⎥\n",
+      "⎢                                                    _________________________________________________________________________________                                                                                                                ⎥\n",
+      "⎢                                                   ╱                                      2                                        2                                                                                                                 ⎥\n",
+      "⎢                                                 ╲╱  │l₁⋅sin(q₁(t)) + lr₂⋅sin(q₂(t)) - ya│  + │l₁⋅cos(q₁(t)) + lr₂⋅cos(q₂(t)) - xa│  ⋅(l₁ + lr₂⋅cos(q₁(t) - q₂(t)) - xa⋅cos(q₁(t)) - ya⋅sin(q₁(t)))                                                  ⎥\n",
+      "⎢                                                                                                                                                                                                                                                     ⎥\n",
+      "⎢                                                                                 ⎛  2                                                                              2                                                 2     2⎞                        ⎥\n",
+      "⎢                       -(lr₂⋅sin(q₁(t) - q₂(t)) - xa⋅sin(q₁(t)) + ya⋅cos(q₁(t)))⋅⎝l₁  + 2⋅l₁⋅lr₂⋅cos(q₁(t) - q₂(t)) - 2⋅l₁⋅xa⋅cos(q₁(t)) - 2⋅l₁⋅ya⋅sin(q₁(t)) + lr₂  - 2⋅lr₂⋅xa⋅cos(q₂(t)) - 2⋅lr₂⋅ya⋅sin(q₂(t)) + xa  + ya ⎠                        ⎥\n",
+      "⎢                       ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────                       ⎥\n",
+      "⎢                                                    _________________________________________________________________________________                                                                                                                ⎥\n",
+      "⎢                                                   ╱                                      2                                        2                                                                                                                 ⎥\n",
+      "⎣                                                 ╲╱  │l₁⋅sin(q₁(t)) + lr₂⋅sin(q₂(t)) - ya│  + │l₁⋅cos(q₁(t)) + lr₂⋅cos(q₂(t)) - xa│  ⋅(l₁ + lr₂⋅cos(q₁(t) - q₂(t)) - xa⋅cos(q₁(t)) - ya⋅sin(q₁(t)))                                                  ⎦\n"
      ]
     }
    ],
    "source": [
+    "from IPython.display import display, HTML\n",
+    "display(HTML(\"<style>.container { width:200% !important; }</style>\"))\n",
+    "\n",
     "A_theta = Jh_invtrans * A\n",
     "A_theta = sp.simplify(A_theta)\n",
-    "sp.pprint(A_theta)"
+    "sp.pprint(A_theta, wrap_line = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "369aa4ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "⎡lr₂⋅(-(l₁⋅sin(q₁(t) - q₂(t)) + xa⋅sin(q₂(t)) - ya⋅cos(q₂(t)))⋅(l₁ + lr₂⋅cos(q₁(t) - q₂(t)) - xa⋅cos(q₁(t)) - ya⋅sin(q₁(t))) - (lr₂⋅sin(q₁(t) - q₂(t)) - xa⋅sin(q₁(t)) + ya⋅cos(q₁(t)))⋅(l₁⋅cos(q₁(t) - q₂(t)) + lr₂ - xa⋅cos(q₂(t)) - ya⋅sin(q₂(t))))⎤\n",
+      "⎢─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────⎥\n",
+      "⎢                                                    _________________________________________________________________________________                                                                                                                ⎥\n",
+      "⎢                                                   ╱                                      2                                        2                                                                                                                 ⎥\n",
+      "⎢                                                 ╲╱  │l₁⋅sin(q₁(t)) + lr₂⋅sin(q₂(t)) - ya│  + │l₁⋅cos(q₁(t)) + lr₂⋅cos(q₂(t)) - xa│  ⋅(l₁ + lr₂⋅cos(q₁(t) - q₂(t)) - xa⋅cos(q₁(t)) - ya⋅sin(q₁(t)))                                                  ⎥\n",
+      "⎢                                                                                                                                                                                                                                                     ⎥\n",
+      "⎢                                                                                 ⎛  2                                                                              2                                                 2     2⎞                        ⎥\n",
+      "⎢                       -(lr₂⋅sin(q₁(t) - q₂(t)) - xa⋅sin(q₁(t)) + ya⋅cos(q₁(t)))⋅⎝l₁  + 2⋅l₁⋅lr₂⋅cos(q₁(t) - q₂(t)) - 2⋅l₁⋅xa⋅cos(q₁(t)) - 2⋅l₁⋅ya⋅sin(q₁(t)) + lr₂  - 2⋅lr₂⋅xa⋅cos(q₂(t)) - 2⋅lr₂⋅ya⋅sin(q₂(t)) + xa  + ya ⎠                        ⎥\n",
+      "⎢                       ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────                       ⎥\n",
+      "⎢                                                    _________________________________________________________________________________                                                                                                                ⎥\n",
+      "⎢                                                   ╱                                      2                                        2                                                                                                                 ⎥\n",
+      "⎣                                                 ╲╱  │l₁⋅sin(q₁(t)) + lr₂⋅sin(q₂(t)) - ya│  + │l₁⋅cos(q₁(t)) + lr₂⋅cos(q₂(t)) - xa│  ⋅(l₁ + lr₂⋅cos(q₁(t) - q₂(t)) - xa⋅cos(q₁(t)) - ya⋅sin(q₁(t)))                                                  ⎦\n",
+      "⎡0⎤\n",
+      "⎢ ⎥\n",
+      "⎣0⎦\n"
+     ]
+    }
+   ],
+   "source": [
+    "h2 = sp.asin(Rx/R.norm())\n",
+    "theta2 = sp.Matrix([[h2],\n",
+    "                    [q2]])\n",
+    "\n",
+    "Jh2 = theta.jacobian(q)\n",
+    "Jh2 = sp.simplify(Jh2)\n",
+    "\n",
+    "Jh2_inv = Jh2.inv()\n",
+    "Jh2_invtrans = Jh2_inv.transpose()\n",
+    "\n",
+    "A_theta2 = Jh2_invtrans * A\n",
+    "A_theta2 = sp.simplify(A_theta2)\n",
+    "sp.pprint(A_theta2,  wrap_line = False)\n",
+    "\n",
+    "sp.pprint(A_theta-A_theta2,  wrap_line = False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "369aa4ff",
+   "id": "353a82fe",
    "metadata": {},
    "outputs": [],
    "source": []
