--- a/Kian_code/find_eoms.ipynb
+++ b/Kian_code/find_eoms.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "b43582c4",
    "metadata": {},
    "outputs": [],
@@ -23,6 +23,7 @@
     "J1, J2 = sp.symbols('J1 J2')\n",
     "\n",
     "# Positions of the center of mass for each link\n",
+    "# Defined in absolute angles from the horizontal \n",
     "x1 = lc1 * sp.cos(q1)\n",
     "y1 = lc1 * sp.sin(q1)\n",
     "x2 = l1 * sp.cos(q1) + lc2 * sp.cos(q2)\n",
@@ -37,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "22d6051c",
    "metadata": {},
    "outputs": [],
@@ -52,18 +53,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "1acbaf45",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "((Derivative(q1(t), (t, 2)), ddq1), (Derivative(q1(t), t), dq1), (q1(t), q1), (Derivative(q2(t), (t, 2)), ddq2), (Derivative(q2(t), t), dq2), (q2(t), q2))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Potential energy of each link\n",
     "V1 = m1 * g * y1\n",
@@ -83,14 +76,12 @@
     "for i in range(2):\n",
     "    replacements += ((q[i].diff(t).diff(t), sp.Symbol(f'ddq{i + 1}')),\n",
     "                    (q[i].diff(t), sp.Symbol(f'dq{i + 1}')),\n",
-    "                    (q[i], sp.Symbol(f'q{i + 1}')))\n",
-    "\n",
-    "print(replacements)"
+    "                    (q[i], sp.Symbol(f'q{i + 1}')))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "24fd786e",
    "metadata": {},
    "outputs": [
@@ -151,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "9d0ede96",
    "metadata": {},
    "outputs": [
@@ -237,174 +228,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "99f80ea1",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Matrix([\n",
-      "[ l1*(lr2*sin(q1(t) - q2(t)) - xa*sin(q1(t)) + ya*cos(q1(t)))/Abs(l1*sin(q1(t)) + lr2*sin(q2(t)) - ya)^2 + Abs(l1*cos(q1(t)) + lr2*cos(q2(t)) - xa)^2^1/2],\n",
-      "[lr2*(-l1*sin(q1(t) - q2(t)) - xa*sin(q2(t)) + ya*cos(q2(t)))/Abs(l1*sin(q1(t)) + lr2*sin(q2(t)) - ya)^2 + Abs(l1*cos(q1(t)) + lr2*cos(q2(t)) - xa)^2^1/2]])\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Actuator parameters (pulley)\n",
-    "xa, ya = sp.symbols('xa ya') #x, y coordinate of pulley center\n",
-    "\n",
-    "# Rope connection length along joint 2\n",
-    "lr2 = sp.symbols('lr2')\n",
-    "kx = l1 * sp.cos(q1) + lr2 * sp.cos(q2)\n",
-    "ky = l1 * sp.sin(q1) + lr2 * sp.sin(q2)\n",
-    "\n",
-    "k = sp.Matrix([[kx],\n",
-    "               [ky]])\n",
-    "\n",
-    "dkdq1 = sp.diff(k, q1)\n",
-    "dkdq2 = sp.diff(k, q2)\n",
-    "\n",
-    "R = sp.Matrix([[xa - kx],\n",
-    "               [ya - ky]])\n",
-    "Rx = R[0]\n",
-    "Ry = R[1]\n",
-    "r = R/R.norm()\n",
-    "\n",
-    "A1 = r.dot(dkdq1)\n",
-    "A2 = r.dot(dkdq2)\n",
-    "A = sp.Matrix([[A1],\n",
-    "               [A2]])\n",
-    "A = sp.simplify(A)\n",
-    "print(custom_pretty(A))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "12ebe607",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "h = sp.atan2(Rx, Ry)\n",
-    "theta = sp.Matrix([[h],\n",
-    "                   [q2]])\n",
-    "theta = sp.Matrix([[q2],\n",
-    "                   [h]])\n",
-    "Jh = theta.jacobian(q)\n",
-    "Jh = sp.simplify(Jh)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "4d214328",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Jh_inv = Jh.inv()\n",
-    "Jh_invtrans = Jh_inv.transpose()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "7e9dda5d",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style>.container { width:200% !important; }</style>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "⎡lr₂⋅(-(l₁⋅sin(q₁(t) - q₂(t)) + xa⋅sin(q₂(t)) - ya⋅cos(q₂(t)))⋅(l₁ + lr₂⋅cos(q₁(t) - q₂(t)) - xa⋅cos(q₁(t)) - ya⋅sin(q₁(t))) - (lr₂⋅sin(q₁(t) - q₂(t)) - xa⋅sin(q₁(t)) + ya⋅cos(q₁(t)))⋅(l₁⋅cos(q₁(t) - q₂(t)) + lr₂ - xa⋅cos(q₂(t)) - ya⋅sin(q₂(t))))⎤\n",
-      "⎢─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────⎥\n",
-      "⎢                                                    _________________________________________________________________________________                                                                                                                ⎥\n",
-      "⎢                                                   ╱                                      2                                        2                                                                                                                 ⎥\n",
-      "⎢                                                 ╲╱  │l₁⋅sin(q₁(t)) + lr₂⋅sin(q₂(t)) - ya│  + │l₁⋅cos(q₁(t)) + lr₂⋅cos(q₂(t)) - xa│  ⋅(l₁ + lr₂⋅cos(q₁(t) - q₂(t)) - xa⋅cos(q₁(t)) - ya⋅sin(q₁(t)))                                                  ⎥\n",
-      "⎢                                                                                                                                                                                                                                                     ⎥\n",
-      "⎢                                                                                 ⎛  2                                                                              2                                                 2     2⎞                        ⎥\n",
-      "⎢                       -(lr₂⋅sin(q₁(t) - q₂(t)) - xa⋅sin(q₁(t)) + ya⋅cos(q₁(t)))⋅⎝l₁  + 2⋅l₁⋅lr₂⋅cos(q₁(t) - q₂(t)) - 2⋅l₁⋅xa⋅cos(q₁(t)) - 2⋅l₁⋅ya⋅sin(q₁(t)) + lr₂  - 2⋅lr₂⋅xa⋅cos(q₂(t)) - 2⋅lr₂⋅ya⋅sin(q₂(t)) + xa  + ya ⎠                        ⎥\n",
-      "⎢                       ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────                       ⎥\n",
-      "⎢                                                    _________________________________________________________________________________                                                                                                                ⎥\n",
-      "⎢                                                   ╱                                      2                                        2                                                                                                                 ⎥\n",
-      "⎣                                                 ╲╱  │l₁⋅sin(q₁(t)) + lr₂⋅sin(q₂(t)) - ya│  + │l₁⋅cos(q₁(t)) + lr₂⋅cos(q₂(t)) - xa│  ⋅(l₁ + lr₂⋅cos(q₁(t) - q₂(t)) - xa⋅cos(q₁(t)) - ya⋅sin(q₁(t)))                                                  ⎦\n"
-     ]
-    }
-   ],
-   "source": [
-    "from IPython.display import display, HTML\n",
-    "display(HTML(\"<style>.container { width:200% !important; }</style>\"))\n",
-    "\n",
-    "A_theta = Jh_invtrans * A\n",
-    "A_theta = sp.simplify(A_theta)\n",
-    "sp.pprint(A_theta, wrap_line = False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "369aa4ff",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "⎡lr₂⋅(-(l₁⋅sin(q₁(t) - q₂(t)) + xa⋅sin(q₂(t)) - ya⋅cos(q₂(t)))⋅(l₁ + lr₂⋅cos(q₁(t) - q₂(t)) - xa⋅cos(q₁(t)) - ya⋅sin(q₁(t))) - (lr₂⋅sin(q₁(t) - q₂(t)) - xa⋅sin(q₁(t)) + ya⋅cos(q₁(t)))⋅(l₁⋅cos(q₁(t) - q₂(t)) + lr₂ - xa⋅cos(q₂(t)) - ya⋅sin(q₂(t))))⎤\n",
-      "⎢─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────⎥\n",
-      "⎢                                                    _________________________________________________________________________________                                                                                                                ⎥\n",
-      "⎢                                                   ╱                                      2                                        2                                                                                                                 ⎥\n",
-      "⎢                                                 ╲╱  │l₁⋅sin(q₁(t)) + lr₂⋅sin(q₂(t)) - ya│  + │l₁⋅cos(q₁(t)) + lr₂⋅cos(q₂(t)) - xa│  ⋅(l₁ + lr₂⋅cos(q₁(t) - q₂(t)) - xa⋅cos(q₁(t)) - ya⋅sin(q₁(t)))                                                  ⎥\n",
-      "⎢                                                                                                                                                                                                                                                     ⎥\n",
-      "⎢                                                                                 ⎛  2                                                                              2                                                 2     2⎞                        ⎥\n",
-      "⎢                       -(lr₂⋅sin(q₁(t) - q₂(t)) - xa⋅sin(q₁(t)) + ya⋅cos(q₁(t)))⋅⎝l₁  + 2⋅l₁⋅lr₂⋅cos(q₁(t) - q₂(t)) - 2⋅l₁⋅xa⋅cos(q₁(t)) - 2⋅l₁⋅ya⋅sin(q₁(t)) + lr₂  - 2⋅lr₂⋅xa⋅cos(q₂(t)) - 2⋅lr₂⋅ya⋅sin(q₂(t)) + xa  + ya ⎠                        ⎥\n",
-      "⎢                       ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────                       ⎥\n",
-      "⎢                                                    _________________________________________________________________________________                                                                                                                ⎥\n",
-      "⎢                                                   ╱                                      2                                        2                                                                                                                 ⎥\n",
-      "⎣                                                 ╲╱  │l₁⋅sin(q₁(t)) + lr₂⋅sin(q₂(t)) - ya│  + │l₁⋅cos(q₁(t)) + lr₂⋅cos(q₂(t)) - xa│  ⋅(l₁ + lr₂⋅cos(q₁(t) - q₂(t)) - xa⋅cos(q₁(t)) - ya⋅sin(q₁(t)))                                                  ⎦\n",
-      "⎡0⎤\n",
-      "⎢ ⎥\n",
-      "⎣0⎦\n"
-     ]
-    }
-   ],
-   "source": [
-    "h2 = sp.asin(Rx/R.norm())\n",
-    "theta2 = sp.Matrix([[h2],\n",
-    "                    [q2]])\n",
-    "\n",
-    "Jh2 = theta.jacobian(q)\n",
-    "Jh2 = sp.simplify(Jh2)\n",
-    "\n",
-    "Jh2_inv = Jh2.inv()\n",
-    "Jh2_invtrans = Jh2_inv.transpose()\n",
-    "\n",
-    "A_theta2 = Jh2_invtrans * A\n",
-    "A_theta2 = sp.simplify(A_theta2)\n",
-    "sp.pprint(A_theta2,  wrap_line = False)\n",
-    "\n",
-    "sp.pprint(A_theta-A_theta2,  wrap_line = False)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "353a82fe",
+   "id": "d28ba48e",
    "metadata": {},
    "outputs": [],
    "source": []
