Start splitting into .py and .ipynb, work to be done. AUTOENCODER ON THE WAY WOOHOO

--- a/Kian_code/find_eoms.ipynb
+++ b/Kian_code/find_eoms.ipynb
@@ -135,9 +135,10 @@
     "L_q1_formatted = format_lagrange(eoms[0], \"L_q1\")\n",
     "L_q2_formatted = format_lagrange(eoms[1], \"L_q2\")\n",
     "\n",
-    "# Print the formatted equations\n",
-    "print(L_q1_formatted)\n",
-    "print(L_q2_formatted)\n"
+    "if __name__ == \"__main__\":\n",
+    "    # Print the formatted equations\n",
+    "    print(L_q1_formatted)\n",
+    "    print(L_q2_formatted)\n"
    ]
   },
   {
@@ -215,15 +216,16 @@
     "    G[i] = V.diff(q[i]).simplify().subs(replacements)\n",
     "G = sp.nsimplify(G)\n",
     "\n",
-    "# Print the matrices using the custom printer\n",
-    "print(\"\\nMass Matrix (M):\")\n",
-    "print(custom_pretty(M))\n",
+    "if __name__ == \"__main__\":\n",
+    "    # Print the matrices using the custom printer\n",
+    "    print(\"\\nMass Matrix (M):\")\n",
+    "    print(custom_pretty(M))\n",
     "\n",
-    "print(\"\\nCoriolis Matrix (C):\")\n",
-    "print(custom_pretty(C))\n",
+    "    print(\"\\nCoriolis Matrix (C):\")\n",
+    "    print(custom_pretty(C))\n",
     "\n",
-    "print(\"\\nGravitational Vector (G):\")\n",
-    "print(custom_pretty(G))"
+    "    print(\"\\nGravitational Vector (G):\")\n",
+    "    print(custom_pretty(G))"
    ]
   },
   {
