--- a/Kian_code/Find_A_theta-Cosimo.ipynb
+++ b/Kian_code/Find_A_theta-Cosimo.ipynb
@@ -20,10 +20,6 @@
     }
    ],
    "source": [
-    "import sympy as sp\n",
-    "from IPython.display import display, HTML\n",
-    "display(HTML(\"<style>.container { width:200% !important; }</style>\"))\n",
-    "\n",
     "t = sp.Symbol('t')\n",
     "q1 = sp.Function(\"q1\")(t)\n",
     "q2 = sp.Function(\"q2\")(t)\n",
@@ -128,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "ac4922e0",
    "metadata": {},
    "outputs": [
@@ -142,15 +138,16 @@
       "⎢  ╱                                      2                                        2     ╱                                      2                                        2 ⎥\n",
       "⎢╲╱  (l₁⋅sin(q₁(t)) + lr₂⋅sin(q₂(t)) - ya)  + (l₁⋅cos(q₁(t)) + lr₂⋅cos(q₂(t)) - xa)    ╲╱  (l₁⋅sin(q₁(t)) + lr₂⋅sin(q₂(t)) - ya)  + (l₁⋅cos(q₁(t)) + lr₂⋅cos(q₂(t)) - xa)  ⎥\n",
       "⎢                                                                                                                                                                          ⎥\n",
-      "⎣                                         0                                                                                     1                                          ⎦\n"
+      "⎣                                         1                                                                                     0                                          ⎦\n"
      ]
     }
    ],
    "source": [
-    "h = sp.atan2(Rx, Ry)\n",
-    "h = l\n",
-    "theta = sp.Matrix([[h],\n",
-    "                   [q2]])\n",
+    "h1 = sp.atan2(Rx, Ry)\n",
+    "h1 = l\n",
+    "h2 = q1\n",
+    "theta = sp.Matrix([[h1],\n",
+    "                   [h2]])\n",
     "\n",
     "Jh = theta.jacobian(q)\n",
     "Jh = sp.simplify(Jh)\n",
@@ -159,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "c7e53a00",
    "metadata": {},
    "outputs": [],
@@ -170,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "8ad2bb3b",
    "metadata": {},
    "outputs": [
@@ -193,23 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51506e19",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0fff7a7a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c0974126",
+   "id": "39c9b391",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -217,9 +198,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (ics)",
+   "display_name": "Python (thesis)",
    "language": "python",
-   "name": "ics"
+   "name": "thesis"
   },
   "language_info": {
    "codemirror_mode": {
@@ -231,7 +212,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
