--- a/Kian_code/Learn Transform.ipynb
+++ b/Kian_code/Learn Transform.ipynb
@@ -2,46 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "85bd716d",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'find_eoms'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#%pip install nbimporter\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mfind_eoms\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mipynb\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'find_eoms'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#%pip install nbimporter\n",
-    "import find_eoms.ipynb"
+    "import find_eoms\n",
+    "import find_A_theta\n",
+    "import torch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "a49075fe",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/kian/Documents/Thesis/ICS_fork/ics-pa-sv/Kian_code\n",
-      "['outputs', '__init__.py', '.ipynb_checkpoints', 'Learn Transform.ipynb', 'find_eoms.ipynb', 'Find_A_theta.ipynb', 'Find_A_theta-Cosimo.ipynb']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import os\n",
-    "print(os.getcwd())  # Prints the current working directory\n",
-    "print(os.listdir())  # Prints all files in the current directory"
+    "from IPython.display import display, HTML\n",
+    "display(HTML(\"<style>.container { width:200% !important; }</style>\"))\n"
    ]
   },
   {
@@ -55,9 +34,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (ics)",
+   "display_name": "Python (thesis)",
    "language": "python",
-   "name": "ics"
+   "name": "thesis"
   },
   "language_info": {
    "codemirror_mode": {
@@ -69,7 +48,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
