Implement 2D Kp and Kd

--- a/Kian_code/Controllers/PD.ipynb
+++ b/Kian_code/Controllers/PD.ipynb
@@ -57,7 +57,9 @@
    "outputs": [],
    "source": [
     "Kp = torch.tensor([[30., 0.], [0., 0.]])\n",
-    "Kd = torch.tensor([[15., 0.], [0., 0.]])"
+    "Kd = torch.tensor([[15., 0.], [0., 0.]])\n",
+    "Kp_old = 30.\n",
+    "Kd_old = 15."
    ]
   },
   {
@@ -146,8 +148,12 @@
     "    A_th = transforms.transform_input_matrix_from_inverse_trans(A_q_est, J_h_inv_trans, device)\n",
     "    \n",
     "    u = torch.pinverse(A_th) @ ((Kp @ (th_des - th).T + Kd @ (th_d_des - th_d).T))\n",
-    "\n",
-    "    #print(\"u:\", u)\n",
+    "    u_old = 1/A_th[0,0] * (Kp_old * (th_des[0,0] - th[0,0]) + Kd_old * (th_d_des[0,0] - th_d[0,0]))\n",
+    "    u = u_old\n",
+    "    u = 0.\n",
+    "    print(\"u:\", u)\n",
+    "    print(\"u_old:\", u_old)\n",
+    "    print(\"A_th:\", A_th)\n",
     "\n",
     "\n",
     "    tau_th = A_th * u\n",
