Detach saved data to spare memory

--- a/Kian_code/Controllers/PD.ipynb
+++ b/Kian_code/Controllers/PD.ipynb
@@ -191,17 +191,17 @@
     "    q_real = q_real + q_d_real * dt\n",
     "    \n",
     "\n",
-    "    th_series = torch.cat((th_series, th), dim=0)\n",
-    "    th_d_series = torch.cat((th_d_series, th_d), dim=0)\n",
-    "    th_dd_series = torch.cat((th_dd_series, th_dd), dim=0)\n",
+    "    th_series = torch.cat((th_series, th.detach()), dim=0)\n",
+    "    th_d_series = torch.cat((th_d_series, th_d.detach()), dim=0)\n",
+    "    th_dd_series = torch.cat((th_dd_series, th_dd.detach()), dim=0)\n",
     "    \n",
-    "    q_real_series = torch.cat((q_real_series, q_real), dim=0)\n",
-    "    q_d_real_series = torch.cat((q_d_real_series, q_d_real), dim=0)\n",
-    "    q_dd_real_series = torch.cat((q_dd_real_series, q_dd_real), dim=0)\n",
+    "    q_real_series = torch.cat((q_real_series, q_real.detach()), dim=0)\n",
+    "    q_d_real_series = torch.cat((q_d_real_series, q_d_real.detach()), dim=0)\n",
+    "    q_dd_real_series = torch.cat((q_dd_real_series, q_dd_real.detach()), dim=0)\n",
     "\n",
-    "    q_est_series = torch.cat((q_est_series, q_est), dim=0)\n",
-    "    q_d_est_series = torch.cat((q_d_est_series, q_d_est), dim=0)\n",
-    "    q_dd_est_series = torch.cat((q_dd_est_series, q_dd_est), dim=0) \n",
+    "    q_est_series = torch.cat((q_est_series, q_est.detach()), dim=0)\n",
+    "    q_d_est_series = torch.cat((q_d_est_series, q_d_est.detach()), dim=0)\n",
+    "    q_dd_est_series = torch.cat((q_dd_est_series, q_dd_est.detach()), dim=0) \n",
     "\n",
     "    print(\"\")\n",
     "    #if q_est[0] != q_est[0]:\n",
