--- a/Kian_code/Controllers/PD.ipynb
+++ b/Kian_code/Controllers/PD.ipynb
@@ -12,6 +12,7 @@
     "from matplotlib import pyplot as plt\n",
     "import numpy as np\n",
     "import matplotlib.cm as cm\n",
+    "import scipy\n",
     "\n",
     "module_path = os.path.abspath(os.path.join('..'))\n",
     "if module_path not in sys.path:\n",
@@ -40,14 +41,33 @@
    "outputs": [],
    "source": [
     "rp = robot_parameters.LUMPED_PARAMETERS\n",
-    "model = autoencoders.Autoencoder_double(rp).to(device)\n",
     "plotter = pendulum_plot.Anim_plotter(rp)\n",
+    "neural_net = False\n",
     "\n",
-    "model_location = '../Models/Split_AEs/Lumped_Mass_202501201242_0.pth'\n",
+    "if neural_net:\n",
+    "    model = autoencoders.Autoencoder_double(rp).to(device)\n",
+    "    model_location = '../Models/Split_AEs/ana_theta_loss.pth'\n",
+    "    model.load_state_dict(torch.load(model_location, weights_only=True))\n",
+    "else:\n",
+    "    model = autoencoders.Analytic_transformer(rp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_clockwise(q):\n",
+    "    if (q[0,1] >= q[0,0] and q[0,1] <= q[0,0] + torch.pi) or (q[0,1] >= q[0,0] - 2 * torch.pi and q[0,1] <= q[0,0] - torch.pi):\n",
+    "        clockwise = False\n",
+    "    else:\n",
+    "        clockwise = True\n",
+    "    return clockwise\n",
     "\n",
-    "model.load_state_dict(torch.load(model_location, weights_only=True))\n",
     "\n",
-    "model = autoencoders.Analytic_transformer(rp)"
+    "def wrap_to_pi(tensor):\n",
+    "    return (tensor + torch.pi) % (2 * torch.pi) - torch.pi"
    ]
   },
   {
