--- a/Kian_code/Controllers/PD.ipynb
+++ b/Kian_code/Controllers/PD.ipynb
@@ -76,10 +76,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Kp = torch.tensor([[30., 0.], [0., 0.]])\n",
-    "Kd = torch.tensor([[15., 0.], [0., 0.]])\n",
-    "Kp_old = 30.\n",
-    "Kd_old = 15."
+    "Kp = torch.tensor([[100., 0.], [0., 0.]]).to(device)\n",
+    "Kd = torch.tensor([[40., 0.], [0., 0.]]).to(device)\n",
+    "Kp_old = 50.\n",
+    "Kd_old = 30."
    ]
   },
   {
