QOL fixes for starting conditions

--- a/Kian_code/Controllers/PD.ipynb
+++ b/Kian_code/Controllers/PD.ipynb
@@ -88,22 +88,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#q_start = torch.tensor([[-1.7 * torch.pi/2, -0.7 * torch.pi/2]]).requires_grad_().to(device)\n",
-    "q_start = torch.tensor([[-1.5244, -3.0952]]).requires_grad_().to(device)\n",
+    "q_start = torch.tensor([[-torch.pi/2, -torch.pi/2+0.1]]).requires_grad_().to(device)\n",
+    "#q_start = torch.tensor([[-1.5244, -3.0952]]).requires_grad_().to(device)\n",
     "q_d_start = torch.tensor([[0., 0.]]).requires_grad_().to(device)\n",
+    "#q_d_start = torch.tensor([[0.5, 0.5]]).requires_grad_().to(device)\n",
     "q_dd_start = torch.tensor([[0., 0.]]).requires_grad_().to(device)\n",
     "\n",
-    "q_des = torch.tensor([[-0.3 * torch.pi, 0.5 * torch.pi]]).requires_grad_().to(device)\n",
-    "q_d_des = torch.tensor([[0., 0.]]).requires_grad_().to(device)\n",
+    "is_clockwise_start = check_clockwise(q_start)\n",
     "\n",
-    "xy_des, _ = transforms.forward_kinematics(rp, q_des[0])\n",
+    "xy_des_real = torch.tensor([0., 0.5]).requires_grad_().to(device)\n",
+    "q_des = transforms.inverse_kinematics(rp, xy_des_real, is_clockwise=False).unsqueeze(0)\n",
+    "#q_des = torch.tensor([[-torch.pi/2, -torch.pi/4]]).requires_grad_().to(device)\n",
+    "q_d_des = torch.tensor([[0., 0.]]).requires_grad_().to(device)\n",
     "\n",
     "th_start = model.encoder(q_start)\n",
     "th_d_start = (model.jacobian_enc(q_start) @ q_d_start.T).T\n",
     "th_dd_start = torch.tensor([[0., 0.]]).requires_grad_().to(device) #TODO: Obtain accelerations in thetas\n",
     "\n",
+    "is_clockwise_des = check_clockwise(q_des)\n",
     "th_des = model.encoder(q_des)\n",
-    "th_d_des = (model.jacobian_enc(q_des) @ q_d_des.T).T"
+    "th_d_des = (model.jacobian_enc(q_des) @ q_d_des.T).T\n",
+    "\n",
+    "q_des_est = model.decoder(th_des, is_clockwise_des)\n",
+    "q_d_des_est = (model.jacobian_dec(th_des, clockwise=is_clockwise_des) @ th_d_des.T).T\n",
+    "xy_des_est, _ = transforms.forward_kinematics(rp, q_des_est[0])"
    ]
   },
   {
@@ -116,8 +124,9 @@
     "th_d_series = th_d_start.clone().detach()\n",
     "th_dd_series = th_dd_start.clone().detach()\n",
     "\n",
-    "q_est_series = model.decoder(th_start)\n",
-    "q_d_est_series = (model.jacobian_dec(th_start) @ th_d_start.T).T\n",
+    "\n",
+    "q_est_series = model.decoder(th_start, clockwise=is_clockwise_start)\n",
+    "q_d_est_series = (model.jacobian_dec(th_start, clockwise=is_clockwise_start) @ th_d_start.T).T\n",
     "q_dd_est_series = torch.zeros((1,2)).to(device)\n",
     "\n",
     "\n",
@@ -126,9 +135,8 @@
     "q_dd_real_series = q_dd_start\n",
     "\n",
     "\n",
-    "\n",
     "dt = 0.01\n",
-    "t_end = 5\n",
+    "t_end = 15\n",
     "\n",
     "th = th_start\n",
     "th_d = th_d_start\n",
