--- a/Kian_code/Controllers/PD.ipynb
+++ b/Kian_code/Controllers/PD.ipynb
@@ -267,16 +267,15 @@
     "\n",
     "    #print(is_clockwise)\n",
     "    print(\"\")\n",
-    "    #if q_est[0] != q_est[0]:\n",
-    "    #    print(\"nan detected\")\n",
-    "    #    break\n",
     "\n",
-    "print(q_real_series)\n",
-    "print(q_d_real_series)\n",
-    "print(q_dd_real_series)\n",
-    "print(q_est_series)\n",
-    "print(q_d_est_series)\n",
-    "print(q_dd_est_series)\n"
+    "    \n",
+    "    \n",
+    "#print(q_real_series)\n",
+    "#print(q_d_real_series)\n",
+    "#print(q_dd_real_series)\n",
+    "#print(q_est_series)\n",
+    "#print(q_d_est_series)\n",
+    "#print(q_dd_est_series)\n"
    ]
   },
   {
