Improve data types for visualization

--- a/Kian_code/Controllers/PD.ipynb
+++ b/Kian_code/Controllers/PD.ipynb
@@ -284,17 +284,64 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pos_end_q_real, pos_elbow_q_real = torch.vmap(transforms.forward_kinematics, in_dims=(None, 0))(rp, q_real_series)\n",
-    "pos_end_q_est, pos_elbow_q_est = torch.vmap(transforms.forward_kinematics, in_dims=(None, 0))(rp, q_est_series)\n",
-    "colors_q_real = cm.rainbow(np.linspace(0, 1, pos_end_q_real.size(0)))\n",
-    "colors_q_est = cm.rainbow(np.linspace(0, 1, pos_end_q_est.size(0)))\n",
-    "frames_q_real = plotter.frame_pendulum(pos_end_q_real, pos_elbow_q_real, colors = colors_q_real, height=5, width=5)\n",
-    "frames_q_est = plotter.frame_pendulum(pos_end_q_est, pos_elbow_q_est, colors = colors_q_est, height=5, width=5)\n",
+    "stride = 5\n",
+    "pos_end_q_real, pos_elbow_q_real = torch.vmap(transforms.forward_kinematics, in_dims=(None, 0))(rp, q_real_series[::stride])\n",
+    "pos_end_q_est, pos_elbow_q_est = torch.vmap(transforms.forward_kinematics, in_dims=(None, 0))(rp, q_est_series[::stride])\n",
     "\n",
-    "frames_data = [(frames_q_est, \"q_est\", \"tab:orange\", \"tab:red\"), (frames_q_real, \"q_real\", \"tab:blue\", \"tab:cyan\")]\n",
-    "#frames_data = [(frames_q_real, \"q_real\", \"tab:blue\", \"tab:cyan\")]\n",
-    "#frames_data = [(frames_q_est, \"q_est\", \"tab:orange\", \"tab:red\")]\n",
-    "file_name = \"yahooooo\" \n",
+    "frames_q_real = plotter.frame_pendulum(pos_end_q_real, pos_elbow_q_real)\n",
+    "frames_q_est = plotter.frame_pendulum(pos_end_q_est, pos_elbow_q_est)\n",
+    "\n",
+    "data_real = {\n",
+    "    \"frames\": frames_q_real,\n",
+    "    \"times\": dt,\n",
+    "    \"name\": \"q_real\", \n",
+    "    \"arm_color\": \"tab:blue\",\n",
+    "    \"act_color\": \"tab:cyan\"\n",
+    "}\n",
+    "\n",
+    "data_est = {\n",
+    "    \"frames\": frames_q_est,\n",
+    "    \"times\": dt,\n",
+    "    \"name\": \"q_est\",\n",
+    "    \"arm_color\": \"tab:orange\", \n",
+    "    \"act_color\": \"tab:red\"\n",
+    "}\n",
+    "\n",
+    "ref_pos_real = {\n",
+    "    \"pos\": xy_des_real,\n",
+    "    \"name\": \"real\",\n",
+    "    \"color\": \"tab:blue\"\n",
+    "}\n",
+    "\n",
+    "ref_pos_est = {\n",
+    "    \"pos\": xy_des_est,\n",
+    "    \"name\": \"est\",\n",
+    "    \"color\": \"tab:orange\"\n",
+    "}\n",
+    "\n",
+    "ref_poss = [ref_pos_real, ref_pos_est]\n",
+    "\n",
+    "frames_data = [data_real, data_est]\n",
+    "#frames_data = [data_est]\n",
+    "#frames_data = [data_real]\n",
+    "\n",
+    "name_base = \"(\" + str(rp[\"xa\"]) + \",\" + str(rp[\"ya\"]) + \")_\"\n",
+    "\n",
+    "if neural_net:\n",
+    "    model_type = \"NN\"\n",
+    "else:\n",
+    "    model_type = \"AL\"\n",
+    "\n",
+    "if feedforward:\n",
+    "    controller_type = \"feedforward\" \n",
+    "else:\n",
+    "    controller_type = \"feedback\"\n",
+    "\n",
+    "\n",
+    "\n",
+    "file_name = name_base + model_type + \"_\" + controller_type\n",
+    "if not gravity:\n",
+    "    file_name = file_name + \"_no_G\"\n",
     "file_name_gif = file_name + \".gif\"\n",
     "file_name_mp4 = file_name + \".mp4\"\n",
     "\n",
